# CS2ST

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  flake.nix  release.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: events.rs  feedback.rs  main.rs  state.rs  stats.rs  ui.rs
