[package]
name = "cs2-counter-strafe-trainer"
version = "2.0.0"
edition = "2024"
authors = ["CS2ST Team"]
description = "High-performance Counter-Strike 2 counter-strafe training tool"
license = "MIT"

[dependencies]
rdev = "0.5.3"
egui = "0.29"
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Windows-specific dependencies for better integration
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
